{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 15,
  "lineage": "c78922da-50f7-5fd2-8975-b310b56cc9d9",
  "resources": [
    {
      "module": "module.aws_humangov_infrastructure[\"california\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:542450504390:instance/i-0e7490e46e7be0d62",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7490e46e7be0d62",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jc-key-aws-us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d8f78a4d116316b9",
            "private_dns": "ip-172-31-11-176.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.11.176",
            "public_dns": "ec2-23-22-11-243.compute-1.amazonaws.com",
            "public_ip": "23.22.11.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ead485a258cf8740",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "humangov-california-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-a1a56fe8",
            "tags": {
              "Name": "humangov-california"
            },
            "tags_all": {
              "Name": "humangov-california"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05cda3bdc443c2349"
            ]
          },
          "dependencies": [
            "module.aws_humangov_infrastructure.aws_security_group.state_ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"california\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:542450504390:security-group/sg-05cda3bdc443c2349",
            "description": "Allow traffic on ports 22 and 80",
            "egress": [],
            "id": "sg-05cda3bdc443c2349",
            "ingress": [
              {
                "cidr_blocks": [
                  "45.162.54.158/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "45.162.54.158/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "humangov-california-ec2-sg",
            "name_prefix": "",
            "owner_id": "542450504390",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "humangov-california"
            },
            "tags_all": {
              "Name": "humangov-california"
            },
            "timeouts": null,
            "vpc_id": "vpc-dbb7fbbc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"florida\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:542450504390:instance/i-07085308f70e0d748",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07085308f70e0d748",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jc-key-aws-us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a0ba503b69ce9cb3",
            "private_dns": "ip-172-31-0-94.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.0.94",
            "public_dns": "ec2-184-73-102-254.compute-1.amazonaws.com",
            "public_ip": "184.73.102.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ed6a7cbbaf95fb9f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "humangov-florida-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-a1a56fe8",
            "tags": {
              "Name": "humangov-florida"
            },
            "tags_all": {
              "Name": "humangov-florida"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aede77a5b3da01ba"
            ]
          },
          "dependencies": [
            "module.aws_humangov_infrastructure.aws_security_group.state_ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"florida\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:542450504390:security-group/sg-0aede77a5b3da01ba",
            "description": "Allow traffic on ports 22 and 80",
            "egress": [],
            "id": "sg-0aede77a5b3da01ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "45.162.54.158/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "45.162.54.158/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "humangov-florida-ec2-sg",
            "name_prefix": "",
            "owner_id": "542450504390",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "humangov-florida"
            },
            "tags_all": {
              "Name": "humangov-florida"
            },
            "timeouts": null,
            "vpc_id": "vpc-dbb7fbbc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"texas\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:542450504390:instance/i-0a55cdad85e24ae3c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a55cdad85e24ae3c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jc-key-aws-us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b73c75e2a0925be3",
            "private_dns": "ip-172-31-14-39.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.14.39",
            "public_dns": "ec2-35-172-178-3.compute-1.amazonaws.com",
            "public_ip": "35.172.178.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0352474035ee2b805",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "humangov-texas-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-a1a56fe8",
            "tags": {
              "Name": "humangov-texas"
            },
            "tags_all": {
              "Name": "humangov-texas"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03832fd8524c99129"
            ]
          },
          "dependencies": [
            "module.aws_humangov_infrastructure.aws_security_group.state_ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"texas\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:542450504390:security-group/sg-03832fd8524c99129",
            "description": "Allow traffic on ports 22 and 80",
            "egress": [],
            "id": "sg-03832fd8524c99129",
            "ingress": [
              {
                "cidr_blocks": [
                  "45.162.54.158/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "45.162.54.158/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "humangov-texas-ec2-sg",
            "name_prefix": "",
            "owner_id": "542450504390",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "humangov-texas"
            },
            "tags_all": {
              "Name": "humangov-texas"
            },
            "timeouts": null,
            "vpc_id": "vpc-dbb7fbbc"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}